# portfolio-blog

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  auth.py  config.py  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.js  router.js  style.css
frontend/src/api/: index.js
frontend/src/views/: Admin.vue  Blog.vue  Home.vue  Portfolio-backup.vue  Portfolio.vue  PortfolioItem.vue  Post.vue
